# levenshtein-automata

./: Cargo.toml
src/: alphabet.rs  dfa.rs  lib.rs  parametric_dfa.rs  tests.rs
