[package]
name = "levenshtein_automata"
version = "0.1.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>", "Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"

[dependencies]
fst = {version="0.4", optional=true, default-features=false}

[dev-dependencies]
levenshtein = "1.0"

[features]
fst_automaton = ["fst"]
